--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2014-06-17  gettextize  <bug-gnu-gettext@gnu.org>
+
+	* m4/gettext.m4: Upgrade to gettext-0.18.3.
+	* m4/iconv.m4: Upgrade to gettext-0.18.3.
+	* m4/lib-ld.m4: Upgrade to gettext-0.18.3.
+	* m4/lib-link.m4: Upgrade to gettext-0.18.3.
+	* m4/lib-prefix.m4: Upgrade to gettext-0.18.3.
+	* m4/nls.m4: Upgrade to gettext-0.18.3.
+	* m4/po.m4: Upgrade to gettext-0.18.3.
+	* m4/progtest.m4: Upgrade to gettext-0.18.3.
+
 2007-02-15  gettextize  <bug-gnu-gettext@gnu.org>
 
 	* m4/codeset.m4: New file, from gettext-0.15.
